--- a/lib/lb_web/components/layouts/app.html.heex
+++ b/lib/lb_web/components/layouts/app.html.heex
@@ -1,28 +1,27 @@
-<header class="px-4 sm:px-6 lg:px-8">
-  <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm">
-    <div class="flex items-center gap-4">
-      <a href="/">
-        <img src={~p"/images/logo.svg"} width="36" />
-      </a>
-      <p class="bg-brand/5 text-brand rounded-full px-2 font-medium leading-6">
-        v<%= Application.spec(:phoenix, :vsn) %>
-      </p>
+<header >
+<nav>
+  <div class="container mx-auto px-6 py-2 flex justify-between items-center">
+    <a class="font-bold text-2xl lg:text-4xl" href="#">
+      Games Leaderboard
+    </a>
+    <div class="block lg:hidden">
+      <button class="flex items-center px-3 py-2 border rounded text-gray-500 border-gray-600 hover:text-gray-800 hover:border-teal-500 appearance-none focus:outline-none">
+        <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+          <title>Menu</title>
+          <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
+        </svg>
+      </button>
     </div>
-    <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
-      <a href="https://twitter.com/elixirphoenix" class="hover:text-zinc-700">
-        @elixirphoenix
-      </a>
-      <a href="https://github.com/phoenixframework/phoenix" class="hover:text-zinc-700">
-        GitHub
-      </a>
-      <a
-        href="https://hexdocs.pm/phoenix/overview.html"
-        class="rounded-lg bg-zinc-100 px-2 py-1 hover:bg-zinc-200/80"
-      >
-        Get Started <span aria-hidden="true">&rarr;</span>
-      </a>
+    <div class="hidden lg:block">
+      <ul class="inline-flex">
+        <li><a class="px-4 font-bold" href="/">Home</a></li>
+        <li><a class="px-4 hover:text-gray-800" href="players">Players</a></li>
+        <li><a class="px-4 hover:text-gray-800" href="games">Games</a></li>
+        <li><a class="px-4 hover:text-gray-800" href="scores">Scores</a></li>
+      </ul>
     </div>
   </div>
+</nav>
 </header>
 <main class="px-4 py-20 sm:px-6 lg:px-8">
   <div class="mx-auto max-w-2xl">
