Modified to show MiniXWord in minutes and seconds
I modified the display of the average for the MiniXWord to display in
minutes and seconds to make it a bit easier to read.

--- a/lib/lb_web/controllers/page_html/home.html.heex
+++ b/lib/lb_web/controllers/page_html/home.html.heex
@@ -33,7 +33,7 @@
       <:col :let={scoreboard} label="First name"><%= scoreboard.first_name %></:col>
       <:col :let={scoreboard} label="Last name"><%= scoreboard.last_name %></:col>
       <:col :let={scoreboard} label="Average score">
-        <%= Decimal.round(scoreboard.score, 2) %>
+        <%= convert_number_to_timespan(Decimal.round(scoreboard.score, 2)) %>
       </:col>
       <:col :let={scoreboard} label="Number Of Scores Recorded">
         <%= scoreboard.scores_recorded %>
